--- a/index.css
+++ b/index.css
@@ -17,3 +17,44 @@
     margin: auto;
 
 }
+
+.zoom{
+    width: 400px;
+    height: 500px;
+    margin: auto;
+    text-align: center;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 5px 5px 5px rgb(130, 126, 126);
+    position: relative;
+}
+.zoom img{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    transition: all 1s;
+    cursor: pointer;
+    filter: grayscale(100%);
+}
+.zoom img:hover{
+    transform: scale(1.2,1.2);
+    filter: grayscale(0%);
+}
+.content{
+    background-color: lightgray;
+    color: rgb(14, 14, 14);
+    padding: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    position: absolute;
+    bottom: 0;
+    transform: translateY(160px);
+    transition: all 0.5s;
+
+}
+.zoom:hover .content{
+    transform: translateY(0px);
+}
+
+nav{
+    background-color: black;
+}
