--- a/index.css
+++ b/index.css
@@ -55,3 +55,31 @@
     transform: translateY(0px);
 }
 
+.flex-box{
+    border: 1px solid red;
+    height: 100vh;
+    width: 100%;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin: 100px auto;
+    
+}
+
+.flex-item{
+    background-color: seagreen;
+    color: white;
+    padding: 20px 50px;
+    flex: 0;
+    border-radius: 5px;
+    transition: all 0.5s;
+    cursor: pointer;
+    filter: grayscale(100%);
+}
+
+.flex-item:hover {
+    transform: scale(1.2,1.2);
+    filter: grayscale(0%);
+}
+
